# chackam

./: Cargo.toml  Dockerfile  README.md  commands.txt  trust.readMe
src/: alert.rs  backtest.rs  binance.rs  config.rs  fetch_candles.rs  forex.rs  main.rs  risk.rs  state.rs  strategy.rs  utils.rs
