[package]
name = "rust_trading_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime & HTTP client
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json"] }

# Binance signature + query encoding
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2"

# JSON & environment
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"

# Time & CSV
chrono = "0.4"

# Telegram alerts

teloxide = { version = "0.16", default-features = false, features = ["macros", "rustls"] }

# Technical analysis indicators
ta = "0.5.0"

# Optional: Logging
log = "0.4"
env_logger = "0.11.8"